# thermostats

./: .env  .gitignore  README.md  app.py  pyproject.toml  pyvenv.cfg  readme.markdown  requirements.txt
Scripts/: activate  activate.bat
core/: diagnostic.py  kpi_engine.py  map_engine.py  pellet_engine.py  user_inputs.py
data/: data_france.py  data_meteo.py
data/SH_IN_metropole/: SH_MIN006088001.csv  SH_MIN016089001.csv  SH_MIN018033001.csv  SH_MIN021473001.csv  SH_MIN028070001.csv  SH_MIN029075001.csv  SH_MIN034154001.csv  SH_MIN051449002.csv  SH_MIN060639001.csv  SH_MIN063113001.csv  SH_MIN067124001.csv  SH_MIN113054001.csv  SH_MIN125056001.csv  SH_MIN126198001.csv  SH_MIN130189001.csv  SH_MIN131069001.csv  SH_MIN133281001.csv  SH_MIN135281001.csv  SH_MIN137179001.csv  SH_MIN143062001.csv  SH_MIN144020001.csv  SH_MIN145055001.csv  SH_MIN154526001.csv  SH_MIN164549001.csv  SH_MIN166136001.csv  SH_MIN169029001.csv  SH_MIN175114001.csv
models/: thermal_model.py
notebooks/: EDA.ipynb  EDA_pellets.ipynb  ThermoStats_Architecture.ipynb  chauffe_dashboard.ipynb
scripts/: generate_valdoise_dataset.py
tests/: test_diagnostic.py  test_kpi_engine.py  test_map_engine.py  test_thermal_model.py
utils/: helpers.py
